- Code refactoring - Bug fixes